Entendendo o processo de dense e comentando partes já realizadas para posterior consulta